# arnicafq

./: .gitignore  README.md  pyproject.toml
backend/: main.py  pyproject.toml
backend/config/: default.yaml
backend/src/soccer_analytics/: __main__.py  annotation.py  detection.py  pipeline.py  tracking.py
backend/src/soccer_analytics/api/: app.py  jobs.py  routes.py  schemas.py
backend/tests/: test_pipeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: EventsTimeline.jsx  JobProgress.jsx  PlayerStatsTable.jsx  PossessionChart.jsx  ResultsDashboard.jsx  UploadForm.jsx  VideoPlayer.jsx
src/soccer_analytics/: __init__.py  analytics.py  cli.py  config.py  pipeline.py  team_classifier.py
tests/: test_analytics.py  test_detection.py  test_team_classifier.py  test_tracking.py
